This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: warning: ‘nkwargs’ may be used uninitialized
Type: compile error Stage:
Components: Interpreter Core Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ned.deily, python-dev, serhiy.storchaka, vstinner
Priority: release blocker Keywords:

Created on 2016-09-12 17:55 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (3)
msg276082 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2016-09-12 17:55
Objects/methodobject.c: In function ‘_PyCFunction_FastCallKeywords’:
Objects/methodobject.c:281:24: warning: ‘nkwargs’ may be used uninitialized in this function [-Wmaybe-uninitialized]
     assert((nargs == 0 && nkwargs == 0) || stack != NULL);
                        ^
msg276099 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-09-12 19:33
New changeset e67e685a1301 by Victor Stinner in branch 'default':
Fix warning in _PyCFunction_FastCallKeywords()
https://hg.python.org/cpython/rev/e67e685a1301
msg276100 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2016-09-12 19:50
It should be fixed. Thanks for the report.
History
Date User Action Args
2022-04-11 14:58:36adminsetgithub: 72292
2016-09-12 19:50:08vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg276100
2016-09-12 19:33:59python-devsetnosy: + python-dev
messages: + msg276099
2016-09-12 17:55:52serhiy.storchakacreate