Fix warning in _PyCFunction_FastCallKeywords()

Issue #28105.